--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/favicon.png" />
     <title>Perch Finder</title>
+    <script
+      id="Cookiebot"
+      src="https://consent.cookiebot.com/uc.js"
+      data-cbid="8810bdc3-d54b-4e98-b422-f9f257f12e0e"
+      type="text/javascript"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
